tests/ui/lifetimes/issue-79187.stderr
error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-79187.rs:5:5
   |
LL |     thing(f);
   |     ^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'0 u32)` must implement `FnOnce<(&'1 u32,)>`, for any two lifetimes `'0` and `'1`...
   = note: ...but it actually implements `FnOnce<(&u32,)>`

error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-79187.rs:5:5
   |
LL |     thing(f);
   |     ^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'0 u32)` must implement `FnOnce<(&'1 u32,)>`, for any two lifetimes `'0` and `'1`...
   = note: ...but it actually implements `FnOnce<(&u32,)>`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

